<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.NeighbourFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_neighbours"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_neighbour" />

    <TextView
        android:id="@+id/tv_no_neighbours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_neighbours_information"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>